Implement side config functionality